[gd_scene load_steps=9 format=2]

[ext_resource path="res://Resources/SourceHanSans-Medium.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Script/Client.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 1 )

[node name="Client" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -45.0
margin_right = 45.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 4 )
text = "客户端"

[node name="Text" type="RichTextLabel" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -447.0
margin_bottom = 469.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true

[node name="On_Off" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -132.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 2 )
text = "连接服务"

[node name="Send_One" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -156.0
margin_top = -51.0
custom_fonts/font = SubResource( 3 )
text = "发送数据"

[node name="LineEdit" type="LineEdit" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -49.0
margin_right = 448.0
custom_fonts/font = SubResource( 6 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LineEdit" type="LineEdit" parent="Panel"]
anchor_left = 0.498
anchor_top = 0.374
anchor_right = 0.498
anchor_bottom = 0.452
margin_left = -245.8
margin_top = 0.0239868
margin_right = 246.2
margin_bottom = 0.151978
custom_fonts/font = SubResource( 5 )
placeholder_text = "输入你的名字"

[node name="Sure" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.0
margin_top = -29.5
margin_right = 66.0
margin_bottom = 29.5
custom_fonts/font = SubResource( 2 )
text = "确定"

[connection signal="pressed" from="On_Off" to="." method="_on_On_Off_pressed"]
[connection signal="pressed" from="Send_One" to="." method="_on_Send_One_pressed"]
[connection signal="pressed" from="Panel/Sure" to="." method="_on_Sure_pressed"]
